apps/base/oauth2-proxy/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-http-route
  namespace: oauth2-proxy
spec:
  parentRefs:
  - name: http-gateway
    namespace: gateway
  hostnames:
  - "auth.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: oauth2-proxy
      port: 4180
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-tls-route
  namespace: oauth2-proxy
spec:
  parentRefs:
  - name: tls-gateway
    namespace: gateway
  hostnames:
  - "auth.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: oauth2-proxy
      port: 4180
